Updating Contact information and pages Section

--- a/about.html
+++ b/about.html
@@ -1,9 +1,9 @@
 ---
 layout: null
-section-type: Our Vision
-title: Our Vision
+section-type: Vision
+title: Vision
 ---
-## Our Vision
+## Vision
 
 If your important documentation calls for professional notary service, don’t hesitate to call 24/7 Meena’s Notary Services. When an impartial witness is critical to the timely filing of your paperwork we are ready with passport renewal, notary signatures, and a signing agent.
 
