--- a/index.html
+++ b/index.html
@@ -7,3 +7,5 @@ sitemap:
 <!--
 If you want to have a static message in your intro layout, disable the dynamic-typing in the _config.yml and write here your text
 -->
+
+$5 24/7 MEENA’S NOTARY SERVICES
