--- a/index.html
+++ b/index.html
@@ -8,4 +8,4 @@ sitemap:
 If you want to have a static message in your intro layout, disable the dynamic-typing in the _config.yml and write here your text
 -->
 
-$5 24/7 MEENA’S NOTARY SERVICES
+$4* 24/7 MEENA’S NOTARY SERVICES
